--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,12 @@ main{
     position: fixed;
     left: 0;
     right: 0;
-    margin: 100px 0px;
-    background-color: blue;
+    background-color: black;
+    max-width: 100vw;
 }
 
 .container{
-    width: 150vh;
+    max-width: 1200px;
     margin: 0 auto;
     
    
@@ -26,9 +26,11 @@ main{
 }
 
 .col-33{
-    width: calc(100% / 8);
+    width: calc(100% / 7 - 6px);
     height: 100px;
-    background-color: red;
+    background-image: url(../img/568-200x200.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     border: 1px solid black;
     margin: 3px;
 
