--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,14 @@ main{
     left: 0;
     right: 0;
     background-color: black;
-    max-width: 100vw;
+}
+
+footer{
+    background-color: grey;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .container{
@@ -22,13 +29,17 @@ main{
 .row{
     display: flex;
     flex-wrap: wrap;
-    margin: 100px 0px;  
+}
+
+.d-flex{
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .col-33{
     width: calc(100% / 7 - 6px);
     height: 100px;
-    background-image: url(../img/568-200x200.jpg);
+    background-image: url(https://www.nieddittas.it/wp-content/uploads/2023/06/spiagge-Olbia.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     border: 1px solid black;
@@ -38,4 +49,46 @@ main{
 
 .justify-center{
     justify-content: center;
+}
+
+.py-5{
+    padding: 5px 0px;
+}
+
+.pz-5{
+    padding: 0px 5px;
+}
+
+.py-20{
+    padding: 20px 0px;
+}
+.py-80{
+    padding: 80px 0px;
+}
+
+.bg-grey{
+    background-color: darkgrey;
+}
+
+.col-25{
+    width: 25%;
+    border: 1px solid black;
+}
+
+.col-50{
+    width: 50%;
+    border: 1px solid black;
+
+}
+
+.bg-blue{
+    background-color: blue;
+}
+
+.bg-gold{
+    background-color: gold;
+}
+
+.bg-green{
+    background-color: green;
 }
